--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "cross-env NODE_ENV=production node server/server.js",
     "build": "webpack -p --progress --optimize-minimize",
     "dev": "concurrently --raw --kill-others \"webpack --progress --color --watch \" \"cross-env NODE_ENV=dev nodemon server/server.js\"",
+    "start:test": "concurrently --raw --kill-others \"webpack --progress --color --watch \" \"cross-env NODE_ENV=test nodemon server/server.js\"",
     "test": "cross-env NODE_ENV=test nyc mocha --require babel-core/register --recursive 'tests/setup.js' 'tests/**/*.spec.js'",
     "testF": "mocha --require ./assets/app/test/.setup.js --compilers js:babel-core/register \"./assets/app/test\" --recursive -w",
     "testFF": "mocha --require ./assets/app/test/.setup.js --compilers js:babel-core/register \"./assets/app/test/containers/\" --recursive -w",
