--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bluebird": "3.3.4",
     "boom": "3.0.0",
     "camelcase-keys": "^4.0.0",
+    "chromedriver": "2.35.0",
     "collab-analytics": "1.0.0",
     "collab-db-application": "1.0.0",
     "config": "1.19.0",
@@ -95,7 +96,6 @@
     "chai": "3.4.1",
     "chai-as-promised": "^6.0.0",
     "chai-enzyme": "^0.6.1",
-    "chromedriver": "^2.32.3",
     "concurrently": "^2.2.0",
     "cross-env": "^2.0.0",
     "css-loader": "0.18.0",
