--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,12 +74,7 @@ jobs:
     # The following line was run implicitly in your 1.0 builds based on what CircleCI inferred about the structure of your project. In 2.0 you need to be explicit about which commands should be run. In some cases you can discard inferred commands if they are not relevant to your project.
     - run: if [ -z "${NODE_ENV:-}" ]; then export NODE_ENV=test; fi
     - run: export PATH="~/collab-tools/collab/node_modules/.bin:$PATH"
-    
-    #TODO: Uncomment when tests are fixed
-    #- run: npm install
-    #- run: npm install selenium-standalone@latest -g
-    
-    
+    - run: npm install
     # Save dependency cache
     #- save_cache:
     #    key: v1-dep-{{ .Branch }}-{{ epoch }}
@@ -96,32 +91,27 @@ jobs:
     #    - ~/.cache/bower
     #    - ./node_modules
     
-    #TODO: uncomment next sections when testing passes
-    #- run: mysql -u ubuntu -e "CREATE DATABASE collab_test;"
-    #- run: mysql -u ubuntu -e "CREATE DATABASE collab_logging_test;"
-    
+    # This is based on your 1.0 configuration file or project settings
+    - run: mysql -u ubuntu -e "CREATE DATABASE collab_test;"
+    - run: mysql -u ubuntu -e "CREATE DATABASE collab_logging_test;"
     # Test
     #   This would typically be a build job when using workflows, possibly combined with build
     # This is based on your 1.0 configuration file or project settings
-    
-    
-    #- run: npm run test
-    #- run:
-    #    command: npm run start:test
-    #    background: true
-    #- run: mysql -u ubuntu -e "INSERT INTO collab_test.users (id, google_id, email, display_name, display_image, google_refresh_token, created_at, updated_at) values ('$TEST_USER_ID', '$TEST_GOOGLE_ID', '$TEST_EMAIL', 'NUSCollab TestAccount', '$TEST_DISPLAY_IMAGE', '$TEST_REFRESH_TOKEN', '2017-09-24 09:25:01', '2017-09-24 09:25:01');"
-    #- run: for i in {1..60}; do if $(curl --output /dev/null --silent --head --fail http://localhost:8080); then break; else printf '.'; sleep 1; fi; done
-    #- run: sleep 20
-    #- run: selenium-standalone start & npm run test:e2e
-    
+    - run: npm run test
+    - run:
+        command: npm run start:test
+        background: true
+    - run: mysql -u ubuntu -e "INSERT INTO collab_test.users (id, google_id, email, display_name, display_image, google_refresh_token, created_at, updated_at) values ('$TEST_USER_ID', '$TEST_GOOGLE_ID', '$TEST_EMAIL', 'NUSCollab TestAccount', '$TEST_DISPLAY_IMAGE', '$TEST_REFRESH_TOKEN', '2017-09-24 09:25:01', '2017-09-24 09:25:01');"
+    - run: for i in {1..60}; do if $(curl --output /dev/null --silent --head --fail http://localhost:8080); then break; else printf '.'; sleep 1; fi; done
+    - run: sleep 20
+    - run: selenium-standalone start & npm run test:e2e
     # Teardown
     #   If you break your build into multiple jobs with workflows, you will probably want to do the parts of this that are relevant in each
     # Save test results
-    
-    #- store_test_results:
-    #    path: /tmp/circleci-test-results
+    - store_test_results:
+        path: /tmp/circleci-test-results
     # Save artifacts
-    #- store_artifacts:
-    #    path: /tmp/circleci-artifacts
-    #- store_artifacts:
-    #    path: /tmp/circleci-test-results
+    - store_artifacts:
+        path: /tmp/circleci-artifacts
+    - store_artifacts:
+        path: /tmp/circleci-test-results
