--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "history": "2.0.1",
     "inert": "3.2.0",
     "joi": "8.0.4",
-    "jquery": "2.2.1",
+    "jquery": ">=3.0.0",
     "js-cookie": "^2.1.3",
     "jsonwebtoken": "5.7.0",
-    "lodash": "3.10.1",
+    "lodash": ">=4.17.5",
     "material-ui": "^0.16.7",
     "moment": "^2.14.1",
     "mysql": "2.10.2",
