--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,6 +98,7 @@ jobs:
     #   This would typically be a build job when using workflows, possibly combined with build
     # This is based on your 1.0 configuration file or project settings
     - run: npm run test
+    - run: mkdir migrations/collab_test
     - run:
         command: npm run start:test
         background: true
